@@ -79,9 +79,6 @@ t/data/testreq1.der
 t/data/testreq1.pem
 t/data/verisign.crl.der
 t/data/verisign.crl.pem
-t/external/08_external.t
-t/external/15_altnames.t
-t/external/20_cert_chain.t
 t/external/ocsp.t
 t/handle/external/10_destroy.t
 t/handle/external/50_external.t
