@@ -6,6 +6,10 @@ Revision history for Perl extension Net::SSLeay.
 	  Dan Book.
 	- When building Net-SSLeay, exit if an OpenSSL executable cannot be
 	  found in PATH. Fixes RT#131060. Thanks to Nigel Horne for the report.
+	- Remove non-OCSP external tests, many of which unnecessarily duplicate
+	  local tests or fail for reasons outside of our control. Fixes
+	  RT#129542. Thanks to Andreas Vögele for the bug report that
+	  ultimately led to this change.
 
 1.88 2019-05-10
 	- New stable release incorporating all changes from developer
